name:                AdventOfCode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mark-gerarts/AdventOfCode#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Gerarts
maintainer:          mark.gerarts@gmail.com
copyright:           2020 Mark Gerarts
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable AdventOfCode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       regex-tdfa
  other-modules:       Day01A
